<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_user"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rusi.myfootballstats.EditUserActivity"
    android:background="@drawable/background2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/edit_user_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewExplication"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewName"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:id="@+id/inputName"
                android:textColorLink="?attr/editTextColor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/text_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewSurname"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textStyle="bold"
                android:id="@+id/inputSurname"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/text_alias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewAlias"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textStyle="bold"
                android:id="@+id/inputAlias"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/text_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewFavNumber"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textStyle="bold"
                android:id="@+id/inputFavNumber"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/text_peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewPeso"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                android:id="@+id/inputPeso"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/text_altura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewAltura"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textStyle="bold"
                android:id="@+id/inputAltura"
                android:textAlignment="center" />


        </LinearLayout>




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:text="@string/accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/acceptButton" />

        <Button
            android:text="@string/text_cancell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cancellButton"/>


    </LinearLayout>




</LinearLayout>
